@@ -19,3 +19,8 @@ override_dh_strip:
 	
 override_dh_compress:
 	dh_compress -X.js -X_static/* -X _sources/* -X_sources/*/* -X.inv
+
+override_dh_auto_test:
+	set -e; for python in $(shell pyversions -r); do \
+		$$python tests/test_all.py -q; \
+	done;
